header and table

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Practice</title>
 </head>
 <body>
+    <h1 style="color: lavender; font-weight: lighter;">This is the first website for the Codetribe bootccamp</h1>
+
+    <h2>This is the first website for the Codetribe bootccamp</h2>
+    <h3>This is the first website for the Codetribe bootccamp</h3>
+    <h4>This is the first website for the Codetribe bootccamp</h4>
+    <h5>This is the first website for the Codetribe bootccamp</h5>
+    <h6>This is the first website for the Codetribe bootccamp</h6>
+
+    <p>Shopping list</p>
+    <ul>
+        <li>Milk</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
     
 </body>
 </html>
