--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Home Page</title>
 </head>
 
-<body style="background-color: #cba565">
+<body style="background: linear-gradient(90deg, #cba565 0%, #f6cd8b 35%, #ffe9a5 100%)">
     <div>
 
         <head>
@@ -51,7 +51,7 @@
             </tr>
 
             <tr>
-                <td style="padding-left: 20vh; padding-top: 50px; color: #ffe9a5; font-style: italic;">
+                <td style="padding-left: 20vh; padding-top: 50px; color: #ffe9a5; font-style: italic; font-weight: bolder;">
                     <h1>Hi, I am Thato.......</h1>
                     <p>an aspiring software engineer. I have taken a huge interest in Web development lately
                         <br>and now I am in the Code Tribe bootcamp....whoop! whoop!
@@ -84,7 +84,7 @@
         </table>
         <table style="padding-top: 2%;">
 
-            <tr style="margin-top: 40%; background-color: #cba565;">
+            <tr style="margin-top: 40%; background: linear-gradient(90deg, #cba565 0%, #f6cd8b 35%, #ffe9a5 100%)">
                 <td style="width: 2%; column-width: 2px; padding-left: 10%;">
                     <a href="https://www.instagram.com/tmaty_/">
                         <img src="./assets/logo/undraw_camera (1).svg" height="30px" />
