The complete about page

--- a/about.html
+++ b/about.html
@@ -1,12 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
 </head>
-<body>
-    <h1>This is the about me page</h1>
+
+<body style="background: linear-gradient(270deg, #cba565 0%, #f6cd8b 35%, #ffe9a5 100%);">
+    <div>
+
+        <head>
+            <table style="width: 100%;">
+                <tr>
+
+                    <td>
+                        <a href="./index.html">
+                            <img src="./assets/logo/undraw_code.svg" />
+                        </a>
+                    </td>
+
+                    <td align="right">
+                        <nav style="margin-right: 50px;
+                           margin-top: 16px;
+                           margin-bottom: 16px;
+                           margin-left: 50px;">
+                            <a href="./index.html">
+                                Home
+                            </a>
+                            <a href="#" style="margin: 16px;">
+                                About
+                            </a>
+                            <a href="./contact.html">
+                                Contact Me
+                            </a>
+                        </nav>
+                    </td>
+                </tr>
+            </table>
+        </head>
+    </div>
+
+    <main style="height: 100vh;">
+        <table>
+            <tr>
+                <td style="color: #582c19; font-style: italic; padding-left: 5%; padding-top: 4%;">
+                    <h1>"If You Have A Goal? Then Go Do It.<br> Or Are You Scared? Then Go Do It Scared."</h1>
+                </td>
+            </tr>
+        </table>
+        <table style="width: 100%; margin-top: 10%;">
+            <tr>
+                <td style="color: #9a6855;" align="center" colspan="3">
+                    <h1>More About Me......</h1>
+                    <p style="font-weight: bolder;">I am currently based in Limpopo. I first got interested in coding,
+                        when I took <br>a computer science course.
+                        It introduced me to the basic concepts,<br>and even though I left after one year. I continued to
+                        practice
+                        <br>the concepts. Through Freecodecamp.org and now <br>I am part of a CodeTribe bootcamp :-)
+                        <br>
+                        <br>
+                        Apart from coding however, I do have other interests, such as reading novels
+                        <br>and being a coffee/tea enthusiast. An online read, I would
+                        <br>recommend is <a href="https://dashingdon.com/play/leem/court-of-harts/mygame/" target="_blank">Court Of Harts</a>.
+                    </p>
+                </td>
+            </tr>
+        </table>
+    </main>
+    <footer>
+        <table style="padding-top: 2%;">
+
+            <tr style="margin-top: 40%;">
+                <td style="width: 2%; column-width: 2px; padding-left: 10%;">
+                    <a href="https://www.instagram.com/tmaty_/">
+                        <img src="./assets/logo/undraw_camera (1).svg" height="30px" />
+                        <p style="font-size: x-small;">Instagram</p>
+                    </a>
+                </td>
+                <td style="width: 2%; column-width: 2px;">
+                    <a href="https://twitter.com/tmaty_">
+                        <img src="./assets/logo/undraw_bird (1).svg" height="30px" />
+                        <p style="font-size: x-small;">Twitter</p>
+                    </a>
+
+                </td>
+                <td style="width: 2%; column-width: 2px; padding-right: 30%;">
+                    <a href="https://undraw.co/">
+                        Image Source: unDraw
+                    </a>
+                </td>
+
+            </tr>
+        </table>
+    </footer>
 </body>
+
 </html>
