The complete contact me page

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         </head>
     </div>
 
-    <main style="height: 100vh;">
+    <main style="height: 80vh;">
         <table>
             <tr>
                 <td style="color: #582c19; font-style: italic; padding-left: 5%; padding-top: 4%;">
@@ -60,6 +60,9 @@
                         practice
                         <br>the concepts. Through Freecodecamp.org and now <br>I am part of a CodeTribe bootcamp :-)
                         <br>
+                        <br>
+                        A long term goal, will be to be a software Engineer/
+                        <br>Full Stack Developer. I will like to
                         <br>
                         Apart from coding however, I do have other interests, such as reading novels
                         <br>and being a coffee/tea enthusiast. An online read, I would
