--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact me</title>
 </head>
-<body>
+
+<body style="background: linear-gradient(270deg, #cba565 0%, #f6cd8b 35%, #ffe9a5 100%);">
     <div>
 
         <head>
@@ -15,7 +17,7 @@
 
                     <td>
                         <a href="./index.html">
-                        <img src="./assets/logo/undraw_code.svg" />
+                            <img src="./assets/logo/undraw_code.svg" />
                         </a>
                     </td>
 
@@ -24,10 +26,10 @@
                            margin-top: 16px;
                            margin-bottom: 16px;
                            margin-left: 50px;">
-                            <a href="#">
+                            <a href="./index.html">
                                 Home
                             </a>
-                            <a href="./about.html" style="margin: 16px;">
+                            <a href="#" style="margin: 16px;">
                                 About
                             </a>
                             <a href="./contact.html">
@@ -41,48 +43,27 @@
     </div>
 
     <main>
-        <table width="100%" style="margin-bottom: 30px;">
+        <table style="width: 100%;">
             <tr>
-                <td colspan="2" style="background-color:  #ffe9a5;">
-                    <img width="100%" height="600px" src="./assets/logo/undraw_firmware_re_fgdy (1).svg" />
+                <td>
+                    <img src="./assets/logo/undraw_chatting_re_j55r.svg" height="650vh" />
                 </td>
-            </tr>
-
-            <tr>
-                <td style="padding-left: 20vh; padding-top: 50px; color: #ffe9a5; font-style: italic;">
-                    <h1>Hi, I am Thato.......</h1>
-                    <p>an aspiring software engineer. I have taken a huge interest in Web development lately
-                        <br>and now I am in the Code Tribe bootcamp....whoop! whoop!
-                    </p>
-                </td>
-                <td align="right" style="padding-right: 20vh; padding-top: 30px;">
-                    <img src="./assets/logo/T016EBFH7F0-U018EUTLJDS-d7f6199d4b14-512.jpeg"
-                        style="border-radius: 50%; object-fit: cover; border: 10px solid  #ffe9a5;" />
+                <td>
+                    <h1 style="font-style: italic; margin-bottom: 20%; color: #582c19;">Contact Me</h1>
+                    <input type="text" placeholder="Text......"
+                        style="padding: 15%; border-radius: 2%; margin-bottom: 2%;" />
+                    <input type="text" placeholder="enter email" size="80%" style="padding: 2%; margin-bottom: 2%" />
+                    <a href="./index.html">
+                        <button style="padding: 2%;">Sumbit</button>
+                    </a>
                 </td>
             </tr>
         </table>
     </main>
-
     <footer>
-        <table style="width: 100%; height: 100px; background-color:  #ffe9a5; padding-top: 30px; padding-bottom: 30px;">
-            <tr>
-                <td style="padding-left: 20vh; font-weight: bolder; color: #cba565;">
-                    You can usually find me at a Mugg & Bean restuarant, with a cup of tea or coffee. <br>So feel free
-                    to drop by, join with a coffee and debate about code.<br>
-                    Alternatively you can also reach me on social platforms.
-                </td>
-                <td colspan="2">
-
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.586534414891!2d29.485600017443847!3d-23.904276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ec6d9e0dc724ff9%3A0x7c73aeb53c79db2!2sMugg%20%26%20Bean!5e0!3m2!1sen!2sza!4v1675604016902!5m2!1sen!2sza"
-                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </td>
-            </tr>
-        </table>
         <table style="padding-top: 2%;">
 
-            <tr style="margin-top: 40%; background-color: #cba565;">
+            <tr style="margin-top: 40%;">
                 <td style="width: 2%; column-width: 2px; padding-left: 10%;">
                     <a href="https://www.instagram.com/tmaty_/">
                         <img src="./assets/logo/undraw_camera (1).svg" height="30px" />
@@ -106,4 +87,5 @@
         </table>
     </footer>
 </body>
+
 </html>
