--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                     <input type="text" placeholder="Text......"
                         style="padding: 15%; border-radius: 2%; margin-bottom: 2%;" />
                     <input type="text" placeholder="enter email" size="80%" style="padding: 2%; margin-bottom: 2%" />
-                    <a href="./index.html">
+                    <a href="./letterImg.html">
                         <button style="padding: 2%;">Sumbit</button>
                     </a>
                 </td>
