--- a/about.html
+++ b/about.html
@@ -62,7 +62,8 @@
                         <br>
                         <br>
                         A long term goal, will be to be a software Engineer/
-                        <br>Full Stack Developer. I will like to
+                        <br>Full Stack Developer. In order to be as equiped as possible.
+                        <br>
                         <br>
                         Apart from coding however, I do have other interests, such as reading novels
                         <br>and being a coffee/tea enthusiast. An online read, I would
