about link, redirects to about page

--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,10 @@
                             <a href="./index.html">
                                 Home
                             </a>
-                            <a href="#" style="margin: 16px;">
+                            <a href="./about.html" style="margin: 16px;">
                                 About
                             </a>
-                            <a href="./contact.html">
+                            <a href="#">
                                 Contact Me
                             </a>
                         </nav>
