--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
 
     <main>
         <table id="intro">
+            <caption><h2>"Programmer - An organism that turns coffee into code."</h2></caption>
             <tr>
                 <!-- Video by Kelly: https://www.pexels.com/video/coffee-making-art-by-a-bartender-2909914/ -->
                 <td width="100%" colspan="2">
+                    
                     <video src="./assets/video/video.mp4" autoplay muted loop>
                         Video not supported on browser.
                     </video>
@@ -55,7 +57,7 @@
             <tr>
                 <td id="aboutMe">
                     <h1>Hi, I am Thato.......</h1>
-                    <p>an aspiring software engineer. I have taken a huge interest in Web development lately
+                    <p>an aspiring software engineer, who has has a goal to turn into the mythical 10x developer. <br>I have also taken a huge interest in Web development lately
                         <br>and now I am in the Code Tribe bootcamp....whoop! whoop!
                     </p>
                 </td>
@@ -67,9 +69,9 @@
     </main>
 
     <footer>
-        <table style="width: 100%; height: 100px; background-color:  #ffe9a5; padding-top: 30px; padding-bottom: 30px;">
+        <table id="location">
             <tr>
-                <td style="padding-left: 20vh; font-weight: bolder; color: #cba565;">
+                <td class="location_info">
                     You can usually find me at a Mugg & Bean restuarant, with a cup of tea or coffee. <br>So feel free
                     to drop by, join with a coffee and debate about code.<br>
                     Alternatively you can also reach me on social platforms.
@@ -83,25 +85,30 @@
                 </td>
             </tr>
         </table>
-        <table style="padding-top: 2%;">
+        <table id="footer">
 
-            <tr style="margin-top: 40%; background: linear-gradient(90deg, #cba565 0%, #f6cd8b 35%, #ffe9a5 100%)">
-                <td style="width: 2%; column-width: 2px; padding-left: 10%;">
+            <tr>
+
+                <td style="width: 2%;">
                     <a href="https://www.instagram.com/tmaty_/">
-                        <img src="./assets/logo/undraw_camera (1).svg" height="30px" />
-                        <p style="font-size: x-small;">Instagram</p>
+                        <img src="./assets/logo/instagram.png" height="30px" alt="instagram logo"/>
                     </a>
                 </td>
-                <td style="width: 2%; column-width: 2px;">
+                <td style="width: 2%; ">
                     <a href="https://twitter.com/tmaty_">
-                        <img src="./assets/logo/undraw_bird (1).svg" height="30px" />
-                        <p style="font-size: x-small;">Twitter</p>
+                        <img src="./assets/logo/twitter.png" height="30px" alt="Twitter logo"/>
                     </a>
-
                 </td>
-                <td style="width: 2%; column-width: 2px; padding-right: 30%;">
+
+                <td style="width: 2%; ">
                     <a href="https://undraw.co/">
-                        Image Source: unDraw
+                        <img src="./assets/logo/linkedin.png" height="30" alt="linkedin logo"/>
+                    </a>
+                </td>
+
+                <td style="width: 2%; ">
+                    <a href="https://undraw.co/">
+                        <img src="./assets/logo/link.png" height="30" alt="link logo"/>
                     </a>
                 </td>
 
