--- a/about.html
+++ b/about.html
@@ -172,25 +172,30 @@
 
     </main>
     <footer>
-        <table style="padding-top: 2%;">
+        <table id="footer">
 
-            <tr style="margin-top: 40%;">
-                <td style="width: 2%; column-width: 2px; padding-left: 10%;">
+            <tr>
+
+                <td style="width: 2%;">
                     <a href="https://www.instagram.com/tmaty_/">
-                        <img src="./assets/logo/undraw_camera (1).svg" height="30px" />
-                        <p style="font-size: x-small;">Instagram</p>
+                        <img src="./assets/logo/instagram.png" height="30px" alt="instagram logo"/>
                     </a>
                 </td>
-                <td style="width: 2%; column-width: 2px;">
+                <td style="width: 2%; ">
                     <a href="https://twitter.com/tmaty_">
-                        <img src="./assets/logo/undraw_bird (1).svg" height="30px" />
-                        <p style="font-size: x-small;">Twitter</p>
+                        <img src="./assets/logo/twitter.png" height="30px" alt="Twitter logo"/>
                     </a>
-
                 </td>
-                <td style="width: 2%; column-width: 2px; padding-right: 30%;">
+
+                <td style="width: 2%; ">
                     <a href="https://undraw.co/">
-                        Image Source: unDraw
+                        <img src="./assets/logo/linkedin.png" height="30" alt="linkedin logo"/>
+                    </a>
+                </td>
+
+                <td style="width: 2%; ">
+                    <a href="./links.html">
+                        <img src="./assets/logo/link.png" height="30" alt="link logo"/>
                     </a>
                 </td>
 
