--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         <table id="intro">
             <caption><h2>"Programmer - An organism that turns coffee into code."</h2></caption>
             <tr>
-                <!-- Video by Kelly: https://www.pexels.com/video/coffee-making-art-by-a-bartender-2909914/ -->
                 <td width="100%" colspan="2">
                     
                     <video src="./assets/video/video.mp4" autoplay muted loop>
@@ -107,7 +106,7 @@
                 </td>
 
                 <td style="width: 2%; ">
-                    <a href="https://undraw.co/">
+                    <a href="./links.html">
                         <img src="./assets/logo/link.png" height="30" alt="link logo"/>
                     </a>
                 </td>
