footers have embedded map

--- a/contact.html
+++ b/contact.html
@@ -92,6 +92,17 @@
                     </a>
                 </td>
 
+                <td id="td_map">
+                    <div id="map">
+                    
+                        <iframe width="400" height="140"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.586534414891!2d29.485600017443847!3d-23.904276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ec6d9e0dc724ff9%3A0x7c73aeb53c79db2!2sMugg%20%26%20Bean!5e0!3m2!1sen!2sza!4v1675604016902!5m2!1sen!2sza"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    
+                </div>  
+            </td>
+
             </tr>
         </table>
     </footer>
