Task two update (css)

--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,10 @@
             <form id="container" action="./letterImg.html">
                 <h1>Contact Me</h1>
                 <div class="group_input">
+                    <label for="name_and_surname">Name and Surname: </label>
+                    <input type="text" id="name_and_surname" placeholder="Email Holder">
+                </div>
+                <div class="group_input">
                     <label for="email">Email:</label>
                     <input type="email" id="email" placeholder="email@mail.com" required>
                 </div>
