Task two update (css)

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
             </thead>
             <tbody>
                 <tr >
-                    <td>Mathematics And Computer</td>
+                    <td>Mathematics And Computer Science</td>
                     <td>Computer Science with the following as joint majors: Applied Mathematics, Mathematics, Statistics, and Operation Research.</td>
                 </tr>
                 
@@ -161,6 +161,14 @@
                 </tr>
                 <tr>
                     <td>Xhosa</td>
+                    <td>Highly proficient</td>
+                </tr>
+                <tr>
+                    <td>Setswana</td>
+                    <td>Highly proficient</td>
+                </tr>
+                <tr>
+                    <td>Zulu</td>
                     <td>Highly proficient</td>
                 </tr>
                 <tr>
