index.js integrated with index.html

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
                     <td align="right">
                         <nav >
-                            <a href="#">
+                            <a class="nav0" href="#">
                                 Home
                             </a>
-                            <a id="about" href="./about.html">
+                            <a class="about nav1" href="./about.html">
                                 About
                             </a>
-                            <a href="./contact.html">
+                            <a class="nav2" href="./contact.html">
                                 Contact Me
                             </a>
                         </nav>
@@ -43,7 +43,7 @@
 
     <main>
         <table id="intro">
-            <caption><h2>"Programmer - An organism that turns coffee into code."</h2></caption>
+            <caption><h2 class="coffeeQoute"></h2></caption>
             <tr>
                 <td width="100%" colspan="2">
                     
@@ -55,10 +55,7 @@
 
             <tr>
                 <td id="aboutMe">
-                    <h1>Hi, I am Thato.......</h1>
-                    <p>an aspiring software engineer, who has has a goal to turn into the mythical 10x developer. <br>I have also taken a huge interest in Web development lately
-                        <br>and now I am in the Code Tribe bootcamp....whoop! whoop!
-                    </p>
+                    
                 </td>
                 <td id="picture_of_me" align="right">
                     <img id="picture" src="./assets/logo/T016EBFH7F0-U018EUTLJDS-d7f6199d4b14-512.jpeg"/>
@@ -71,9 +68,6 @@
         <table id="location">
             <tr>
                 <td class="location_info">
-                    You can usually find me at a Mugg & Bean restuarant, with a cup of tea or coffee. <br>So feel free
-                    to drop by, join with a coffee and debate about code.<br>
-                    Alternatively you can also reach me on social platforms.
                 </td>
                 <td colspan="2">
 
@@ -110,10 +104,10 @@
                         <img src="./assets/logo/link.png" height="30" alt="link logo"/>
                     </a>
                 </td>
-
             </tr>
         </table>
     </footer>
 </body>
+<script src="./index.js"></script>
 
 </html>
