--- a/contact.html
+++ b/contact.html
@@ -24,15 +24,16 @@
 
                     <td align="right">
                         <nav>
-                            <a href="./index.html">
-                                Home
+                            <a class="nav0" href="./index.html">
+
                             </a>
-                            <a id="about" href="./about.html" style="margin: 16px;">
-                                About
+                            <a class="about nav1" href="./about.html">
+
                             </a>
-                            <a href="#">
-                                Contact Me
+                            <a class="nav2" href="#">
+
                             </a>
+
                         </nav>
                     </td>
                 </tr>
@@ -44,25 +45,25 @@
     <main>
         
             <form id="container" action="./letterImg.html">
-                <h1>Contact Me</h1>
+                <h1 class="heading"></h1>
                 <div class="group_input">
-                    <label for="name_and_surname">Name and Surname: </label>
+                    <label class="name" for="name_and_surname"> </label>
                     <input type="text" id="name_and_surname" placeholder="Email Holder">
                 </div>
                 <div class="group_input">
-                    <label for="email">Email:</label>
+                    <label class="email" for="email"></label>
                     <input type="email" id="email" placeholder="email@mail.com" required>
                 </div>
                 <div class="group_input">
-                    <label for="message">Message:</label>
+                    <label class="msg" for="message"></label>
                     <textarea name="message" id="message" cols="44" rows="17" placeholder="Hi....." required></textarea>
                 </div> 
                 <div class="blog">
-                    <label for="subscribe">Subscribe for blog updates? </label>
-                    <input type="checkbox" name="subscribe" id="subscribe">
+                    <!-- <label for="subscribe">Subscribe for blog updates? </label>
+                    <input type="checkbox" name="subscribe" id="subscribe"> -->
                 </div>
 
-                <button class="btn">Submit</button>
+                <button class="btn"></button>
             </form>
         
     </main>
@@ -112,5 +113,5 @@
     </footer>
 
 </body>
-
+<script src="./contact.js"></script>
 </html>
