--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
                 </td>
 
                 <td style="width: 2%; ">
-                    <a href="https://undraw.co/">
+                    <a href="https://www.linkedin.com/in/thato-matabane-7185381ba/">
                         <img src="./assets/logo/linkedin.png" height="30" alt="linkedin logo" />
                     </a>
                 </td>
